--- a/src/main/webapp/sistema/Voluntario/visualizarDoacoes.xhtml
+++ b/src/main/webapp/sistema/Voluntario/visualizarDoacoes.xhtml
@@ -33,6 +33,14 @@
 							</p:graphicImage>
 						</p:commandLink>
 
+						<p:commandButton update=":form:doacaoDetail"
+							actionListener="#{consultaDoacoesView.ativarBotoes}"
+							oncomplete="PF('doacaoDialog').show()">
+							<f:setPropertyActionListener value="#{doacao}"
+								target="#{consultaDoacoesView.selectedDoacao}" />
+						</p:commandButton>
+
+
 					</h:panelGrid>
 				</p:panel>
 
