--- a/src/main/webapp/sistema/ONG/visualizarVagas.xhtml
+++ b/src/main/webapp/sistema/ONG/visualizarVagas.xhtml
@@ -44,6 +44,13 @@
 								style="font-weight: bold" />
 							<h:outputText value="#{vaga.trabalhoDistancia}" />
 
+							<p:commandButton value="Mais informações" update=":form:vagaDetail"
+								actionListener="#{consultaVagasView.ativarBotoes}"
+								oncomplete="PF('vagaDialog').show()">
+								<f:setPropertyActionListener value="#{vaga}"
+									target="#{consultaVagasView.selectedVaga}" />
+							</p:commandButton>
+
 						</h:panelGrid>
 					</h:panelGrid>
 				</p:panel>
